// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should render primary type 1`] = `
<div>
  <button
    class="custom-button custom-button--primary"
    data-testid="custom-button"
  >
    text
  </button>
</div>
`;

exports[`Button should render secondary type 1`] = `
<div>
  <button
    class="custom-button custom-button--secondary"
    data-testid="custom-button"
  >
    text
  </button>
</div>
`;
